@@ -2209,16 +2209,17 @@ BEGIN
     if (Max_Cites > Max_Strings)
         bad = 10 * bad + 8;
 
-    if (Ent_Str_Size > Buf_Size)
-        bad = 10 * bad + 9;
-
     /*
-    ** The following check has been removed because glob_str_size can
-    ** now dynamically changed, which makes it possible that this test
-    ** fails without a real problem.
+    ** The following checks have been removed because
+    ** Buf_Size can be dynamically changed, whereas
+    ** Ent_Str_Size and Glob_Str_Size are maximum values
+    ** which are constants.
     **
-    ** if (Glob_Str_Size > Buf_Size)
-    **     bad = 100 * bad + 11;
+    **    if (Ent_Str_Size > Buf_Size)
+    **        bad = 10 * bad + 9;
+    **
+    **    if (Glob_Str_Size > Buf_Size)
+    **        bad = 100 * bad + 11;
     */
 
 /*^^^^^^^^^^^^^^^^^^^^^^^^^^ END OF SECTION 17 ^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
